objects/CampaignMember.object
<CustomObject><fields>
        <fullName>Formal_Greeting__c</fullName>
        <formula>Contact.Account.npo02__Formal_Greeting__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formal Greeting</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Informal_Greeting__c</fullName>
        <formula>Contact.Account.npo02__Informal_Greeting__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Informal Greeting</label>
        <type>Text</type>
    </fields><fields>
        <fullName>RE_Date__c</fullName>
        <label>RE Date</label>
        <type>Date</type>
    </fields><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><enableFeeds>false</enableFeeds></CustomObject>